# budget-shop

./: .gitignore  .gitmessage  DOCKER.md  README.md  Taskfile.yml  docker-compose.yml
.githooks/: pre-push
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
backend/: .flake8  Dockerfile  main.py  pyproject.toml
frontend/: .eslintrc.js  Dockerfile  nginx.conf  package-lock.json  package.json
