[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "roshansadathn", email = "roshansadathn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1,<0.117.0",
    "requests>=2.32.4,<3.0.0"
]

[tool.poetry]
packages = [
    {include = "api"},
    {include = "models"},
    {include = "db"},
    {include = "tests"},
    {include = "services"},
    {include = "utils"},
    {include = "core"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"