[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.116.1",
    "flake8>=7.3.0",
    "langchain>=0.3.27",
    "langgraph>=0.6.4",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
